--- a/src/App.css
+++ b/src/App.css
@@ -15,15 +15,30 @@ body {
 }
 
 .top-albums__form {
-  display: flex;
-  align-items: center;
   margin-bottom: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+@media screen and (min-width: 599px) {
+  .top-albums__form {
+    flex-direction: row;
+    align-items: center;
+  }
 }
 
 .top-albums__input {
   text-transform: capitalize;
   background-color: #eeecec;
   padding: 0.25rem;
+  margin-bottom: 1.25rem;
+}
+
+@media screen and (min-width: 599px) {
+  .top-albums__input {
+    margin-bottom: 0;
+  }
 }
 
 .top-albums__btn {
@@ -34,7 +49,12 @@ body {
   cursor: pointer;
   border: 1px solid rgb(153, 234, 212);
   border-radius: 50px;
-  margin-left: 1rem;
+}
+
+@media screen and (min-width: 599px) {
+  .top-albums__btn {
+    margin-left: 1rem;
+  }
 }
 
 .top-albums__header {
